--- a/ToDoList.API/appsettings.json
+++ b/ToDoList.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Data Source=../ToDoList.Infraestructure/Data/database.db"
+  },
   "AllowedHosts": "*"
 }
