wip: Criação do usuário, Seeder e alterações em Tarefa

--- a/ToDoList.Domain/ToDoList.Domain.csproj
+++ b/ToDoList.Domain/ToDoList.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoList.Common\ToDoList.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Errors\Categoria\" />
+  </ItemGroup>
+
 </Project>
